...
  Widget build(BuildContext context) {
    return GestureDetector(
      onTap: () {
        FocusScope.of(context).unfocus();
      },
      child: Scaffold(
        key: ValueKey("logindatascreen_scaffold"),
        backgroundColor: Colors.white,
        appBar: AppBar(
          backgroundColor: Colors.white,
          elevation: 0,
          leading: IconButton(
            icon: SizedBox(
...
                    },
                    validator: _validateConfirmPassword,
                  ),

                  const SizedBox(height: 50),
                  DecoratedButton(
                    key: const ValueKey("logindatascreen_continuebutton"),
                    primary: true,
                    text: "Continuar",
                    onPressed: () => _navigateToPersonalData(context),
                  ),
                ],
              ),
...
