...
  Widget build(BuildContext context) {
    return GestureDetector(
      onTap: () {
        FocusScope.of(context).unfocus();
      },
      child: Scaffold(
        key: ValueKey("personaldatascreen_scaffold"),
        backgroundColor: Colors.white, //Background color dos formulários
        appBar: AppBar(
          backgroundColor: Colors.white,
          elevation: 0,
          leading: IconButton(
            icon: SizedBox(
...
                    widget._sharedData["neighborhoodName"] = value;
                  },
                ),

                const SizedBox(height: 50),
                DecoratedButton(
                  key: ValueKey("personaldatascreen_registerbutton"),
                  primary: true,
                  text: "Cadastrar-se",
                  isLoading: _isLoading,
                  onPressed: _isLoading ? null : () => _register(),
                ),
              ],
...
